# protocol-testbench

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  visualiser.py  visualizer.py
simulations/: Continuous.csv  Continuous_with_subsequent_corruptions.csv  Event-Based.csv  Event-Based_with_subsequent_corruptions.csv
testbench/: CMakeLists.txt  test-results.cpp  test-results.hpp  testbench-config.hpp.in  testbench.cpp  testbench.hpp
testbench/protocols/: CMakeLists.txt  continuous.cpp  continuous.hpp  event-based.cpp  event-based.hpp  protocol.cpp  protocol.hpp
tester/: CMakeLists.txt  main.cpp
